<resources>
    <string name="app_name">E-CommerceApp</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="successfully_signed_in">Successfully signed in</string>
    <string name="successfully_signed_up">Successfully signed up</string>
    <string name="name">Name</string>
    <string name="products">Products</string>
    <string name="see_all">See all</string>
    <string name="on_sale">On sale</string>
    <string name="categories">Categories</string>
    <string name="product_image">Product image</string>
    <string name="category_image">Category image</string>
    <string name="in_stock">"In stock: "</string>
    <string name="search_products">Search products…</string>
    <string name="back_button">Back button</string>
    <string name="add_to_favorites_button">Add to favorites button</string>
    <string name="delete_from_favorites_button">Delete from favorites button</string>
    <string name="product_successfully_deleted">Product successfully deleted</string>
    <string name="undo">Undo</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="new_password">New password</string>
    <string name="verify_password">Verify password</string>
    <string name="change_password">Change Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="addresses">Addresses</string>
    <string name="go_to_addresses">Go to addresses</string>
    <string name="add_address">Add Address</string>
    <string name="address_title">Address Title</string>
    <string name="address_description">Address Description</string>
    <string name="clear_all_favorites">Clear all favorites</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="cart_button">Cart button</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="cart">Cart</string>
    <string name="card_number">Card number</string>
    <string name="name_on_the_card">Name on the card</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvc">CVC</string>
    <string name="complete_payment">Complete payment</string>
    <string name="payment">Payment</string>
    <string name="card_number_is_blank_or_incorrect">Card number is blank or incorrect</string>
    <string name="name_on_the_card_is_blank">Name on the card is blank</string>
    <string name="expiration_date_is_blank_or_incorrect">Expiration date is blank or incorrect. Please write it like: 0129</string>
    <string name="cvc_is_blank_or_incorrect_please_write_like_445">CVC is blank or incorrect. Please write like: 445</string>
    <string name="payment_completed_logo">Payment completed logo</string>
    <string name="you_have_no_products_in_your_cart">You have no products in your cart</string>
    <string name="no_addresses">No addresses</string>
    <string name="password_is_blank">Password is blank!</string>
</resources>